k8s-infra/webapp-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-lb
  namespace: webapp-team
  labels:
    app: webapp
    type: loadbalancer
    environment: dev
    compliance: iso27001-soc2-gdpr
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "webapp-backendconfig"}'
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false  # Don't allocate NodePorts
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
