k8s-infra/webapp-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-nodeport
  namespace: webapp-team
  labels:
    app: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp-team
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Remove static IP - let GKE allocate dynamically
    # kubernetes.io/ingress.global-static-ip-name: "webapp-ip"
    networking.gke.io/managed-certificates: "webapp-cert"
    kubernetes.io/ingress.allow-http: "true"
    # For external-dns (if installed)
    external-dns.alpha.kubernetes.io/hostname: "webapp.u2i.dev,dev.webapp.u2i.dev,www.webapp.u2i.dev"
spec:
  rules:
    - host: webapp.u2i.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-nodeport
                port:
                  number: 80
    - host: dev.webapp.u2i.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-nodeport
                port:
                  number: 80
    - host: www.webapp.u2i.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-nodeport
                port:
                  number: 80
